--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.btn {
+  position: absolute;
+  margin-top: 10px;
+  left:50% ;
+  margin-left: -50px  !important;
+  width: 100px;
+}
+
+
+.list div {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+  width: 100%;
+  height: 35  px;
+  border-bottom: 1px solid gainsboro;
+}
